syntax = "proto3";

option java_package = "ir.ms.pb";
option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";


enum RPC_Chat_Enum {
    EMPTY = 0;
    AddNewMessage = 7534;
    SetRoomActionDoing = 7576;
    GetChatList = 2677;
    GetChatHistory = 4793;
    PushRoomsChange = 7471;
    GetRoomsChange = 4724;
}
